// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots atoms/Button-Link Login 1`] = `
<button
  className="sc-eCApGN gTbfWe"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  ログイン
</button>
`;

exports[`Storyshots atoms/Button-Link Normal 1`] = `
<button
  className="sc-eCApGN hzjEEC"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  TOP
</button>
`;

exports[`Storyshots atoms/Button-Link Partner Login 1`] = `
<button
  className="sc-eCApGN gkWhPW"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  パートナーログイン
</button>
`;

exports[`Storyshots atoms/Button-Link Signup 1`] = `
<button
  className="sc-eCApGN bqPpy"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  新規会員登録
</button>
`;

exports[`Storyshots atoms/Button-Submit Cancel 1`] = `
<button
  className="sc-jSFkmK OKMmV"
  onClick={[Function]}
  size="md"
>
  キャンセル
</button>
`;

exports[`Storyshots atoms/Button-Submit Change 1`] = `
<button
  className="sc-jSFkmK OKMmV"
  onClick={[Function]}
  size="md"
>
  変更
</button>
`;

exports[`Storyshots atoms/Button-Submit Delete 1`] = `
<button
  className="sc-jSFkmK OKMmV"
  onClick={[Function]}
  size="md"
>
  削除
</button>
`;

exports[`Storyshots atoms/Button-Submit Login 1`] = `
<button
  className="sc-jSFkmK fsgPZt"
  onClick={[Function]}
  size="md"
>
  ログイン
</button>
`;

exports[`Storyshots atoms/Button-Submit Partner 1`] = `
<button
  className="sc-jSFkmK didvyV"
  onClick={[Function]}
  size="md"
>
  パートナーログイン
</button>
`;

exports[`Storyshots atoms/Button-Submit Register 1`] = `
<button
  className="sc-jSFkmK OKMmV"
  onClick={[Function]}
  size="md"
>
  登録
</button>
`;

exports[`Storyshots atoms/Button-Submit Send 1`] = `
<button
  className="sc-jSFkmK OKMmV"
  onClick={[Function]}
  size="md"
>
  送信
</button>
`;

exports[`Storyshots atoms/Button-Submit Signup 1`] = `
<button
  className="sc-jSFkmK btfWSV"
  onClick={[Function]}
  size="md"
>
  新規会員登録
</button>
`;

exports[`Storyshots atoms/Form-Input Email 1`] = `
<input
  autoComplete="on"
  className="sc-dlnjPT gYldIA"
  maxLength={255}
  onChange={[Function]}
  placeholder="メールアドレスを入力してください。"
  type="email"
  value=""
/>
`;

exports[`Storyshots atoms/Form-Input Password 1`] = `
<input
  autoComplete="off"
  className="sc-dlnjPT gYldIA"
  maxLength={20}
  onChange={[Function]}
  placeholder="パスワードを入力してください。"
  type="password"
  value=""
/>
`;

exports[`Storyshots atoms/Form-Input Text 1`] = `
<input
  autoComplete="on"
  className="sc-dlnjPT gYldIA"
  maxLength={255}
  onChange={[Function]}
  placeholder="入力してください"
  type="text"
  value=""
/>
`;

exports[`Storyshots atoms/Link Category Link 1`] = `
<div
  className="sc-bdnylx jTHwZq"
>
  <a
    href="/detail/2020-10-03"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    &lt;&lt; 2020年10月03日の金額情報へ戻る
  </a>
</div>
`;

exports[`Storyshots atoms/Link Detail Link 1`] = `
<div
  className="sc-bdnylx jTHwZq"
>
  <a
    href="/calendar/2020-10-03"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    &lt;&lt; カレンダーへ戻る
  </a>
</div>
`;

exports[`Storyshots atoms/Title Calendar 1`] = `
<div
  className="sc-gtssRu cIxxNY"
>
  <h3>
    カレンダー
  </h3>
</div>
`;

exports[`Storyshots atoms/Title Graph 1`] = `
<div
  className="sc-gtssRu cIxxNY"
>
  <h3>
    グラフ
  </h3>
</div>
`;

exports[`Storyshots molcules/LinkButtonField Login 1`] = `
<div
  className="sc-gKAblj kNZxfG"
>
  <p>
    メインでのご利用の方はこちら
  </p>
  <button
    className="sc-eCApGN gTbfWe"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    ログイン
  </button>
</div>
`;
